
* Dependencies:
  - Updated to xmlenc 0.43.

* XINS/Java Server Framework:
  - Documented the Throwable exception thrown by call(...) method in the
    generated fundament class for a function.

* XINS/Java Common Library:
  - Added the SingleEntryMap class. This class is the implementation of a 
    Map that can only include one entry. Some unit tests testing this class
    has also been added.
______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.160:

* XINS/Java Server Framework:
  - Changed levels for log message entries:
    . 2000 from DEBUG to NOTICE (Bootstrapping XINS/Java Server Framework)
    . 2001 from ERROR to FATAL (Unable to bootstrap XINS/Java Server Framework
      due to unexpected state)
    . 2004 from ERROR to FATAL (Unable to get system property that defines the
      runtime properties file to use, due to a security restriction)
    . 2013 from DEBUG to INFO (API is session-oriented)
    . 2014 from DEBUG to INFO (API is not session-oriented)
    . 2021 from ERROR to FATAL (Manageable object could not be bootstrapped
      due to a missing required property)
    . 2022 from ERROR to FATAL (Manageable object could not be bootstrapped
      due to an invalid property value)
    . 2023 from ERROR to FATAL (Manageable object could not be bootstrapped)
    . 2024 from ERROR to FATAL (Manageable object could not be bootstrapped
      due to an unexpected exception)
    . 2029 from ERROR to FATAL (Function could not be bootstrapped due to a
      missing required property)
    . 2030 from ERROR to FATAL (Function could not be bootstrapped due to an
      invalid property value)
    . 2031 from ERROR to FATAL (Function could not be bootstrapped)
    . 2032 from ERROR to FATAL (Function could not be bootstrapped due to an
      unexpected exception)
    . 4007 from DEBUG to NOTICE (Runtime properties file modified)
      Re-initializing XINS/Java Server Framework)